# coding-agents

./: .gitignore  CONTRIBUTING.md  README.md  REPORT.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  issue_to_pr.yml  reviewer.yml
agents/: __init__.py
agents/code_agent/: __init__.py  chain.py
agents/reviewer_agent/: __init__.py  chain.py  review_output.py
coding_agents/: __init__.py
coding_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
coding_agents/cli/: __init__.py  main.py  serve.py
coding_agents/core/: __init__.py
coding_agents/core/git/: __init__.py  repo.py
coding_agents/core/github/: __init__.py  client.py  issues.py  pr.py
coding_agents/core/llm/: __init__.py  base.py  openai_adapter.py  registry.py  yandex_adapter.py
coding_agents/core/observability/: __init__.py  langfuse.py
coding_agents/core/policies/: __init__.py  iterations.py
coding_agents/core/prompts/: __init__.py  code_agent.py  reviewer_agent.py
docker/: Dockerfile  docker-compose.yml
docs/: demo_issues.md
tests/: __init__.py  conftest.py  test_issues.py  test_policies.py  test_review_output.py
