[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agents"
version = "0.1.0"
description = "Automated agentic SDLC system using GitHub Issues, PRs, and Actions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Coding Agents Team" }]
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langfuse>=2.0.0",
    "PyGithub>=2.4.0",
    "GitPython>=3.1.40",
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "black>=24.0.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
coding-agents = "coding_agents.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["coding_agents*", "agents*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["coding_agents", "agents", "tests"]
exclude = ["__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(\.git|__pycache__|\.mypy_cache|\.ruff_cache)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = ["langchain.*", "langfuse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"
